Updated hydra bullet point to mention it's an internal service.

--- a/yosvany_resume_la.tex
+++ b/yosvany_resume_la.tex
@@ -135,7 +135,7 @@
         \resumeItem{Researched and advocated for switch to internal service framework which helped reduce creation of base level production ready services from 1 month to under 2 weeks.}
         \resumeItem{Created reusable infrastructure patterns using CDK for AWS Lambda, S3, SNS, SQS, and internal pipeline to reduce team development time.}
         \resumeItem{Introduced reusable patterns in frontend React Cypress tests allowing developers to focus on testing their features.}
-        \resumeItem{Improved the reliability of our software by implementing integration testing infrastructure using Amazon Hydra.}
+        \resumeItem{Improved the reliability of our software by implementing integration testing infrastructure using internal tool Amazon Hydra.}
         \resumeItem{Have owned many features end to end (backend, frontend, design, testing, support, etc..)}
         \resumeItem{Extensive experience with oncall, customer issue triage, runbook entries, data migrations, etc..}
         \resumeItem{Conducted 70+ interviews to identify and hire top software engineering talent.}
