--- a/yosvany_resume_la.tex
+++ b/yosvany_resume_la.tex
@@ -125,7 +125,7 @@
     \resumeSubheading{Amazon}{June 2019 --- Present}{Software Development Engineer II | Privacy}{Austin, TX}
       \resumeItemListStart{}
         \resumeItem{Designed and implemented microservice using Java and Amazon Coral service framework for storing and retrieving privacy related data used by internal privacy audit service.}
-        \resumeItem{Implemented internal privacy audit service using Python, Cloudformation, AWS Lambda, and AWS S3 which has cataloged over 25,000 services and has over 51,000 unique internal customers.}  
+        \resumeItem{Major contributor to first iteration of internal privacy audit service using Python, Cloudformation, AWS Lambda, and AWS S3 which has cataloged over 25,000 services and has over 51,000 unique internal customers.}  
         \resumeItem{Designed and implemented CSV import/export feature using Go, Typescript, React, S3, Lambda, SNS, SQS, and Postgres which has allowed 8500+ customers to manipulate data.}
         \resumeItem{Major contributor in migration of privacy audit service to a Go backend running on AWS Fargate from AWS Lambda and Python which led to roughly 66\% reduction in request latency.}
         \resumeItem{Designed and implemented async process to ingest privacy (DSAR and deletion) data in realtime from sister services using SNS, SQS, Lambda, and Java.}
